<resources>
    <string name="app_name">My Application</string>
    <string name="hello_teste">Hello Teste</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="valor_total">R$ 0</string>
    <string name="calcular">CALCULAR</string>
</resources>